syntax = "proto3";

package compose.proto;

import "google/api/annotations.proto";

service ComposeService {
  rpc GetAuthor(GetAuthorRequest) returns (GetAuthorResponse) {
    option (google.api.http) = { get: "/authors/{id}" };
  }
}

message GetAuthorRequest {
  int64 id = 1;
}

message GetAuthorResponse {
  int64 id = 1;
  string name = 2;
  repeated Book books = 3;
}

message Book {
  int64 id = 1;
  string name = 2;
}
